--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "csvtojson": "^2.0.8",
     "d3": "3.5.17",
     "java-func-caller": "0.0.8",
+    "python-shell": "^1.0.6",
     "randomcolor": "^0.5.3"
   }
 }
