--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular": "~1.4.4",
     "angular-material": "~0.10.1",
     "angular-route": "~1.4.4",
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "angular-file-model": "^0.3.1"
   }
 }
